@@ -9611,7 +9611,7 @@ rewrite_statement:
 ;
 
 rewrite_body:
-  record_name from_option _retry_phrase _with_lock _invalid_key_phrases
+  file_or_record_name from_option _retry_phrase _with_lock _invalid_key_phrases
   {
 	cb_emit_rewrite ($1, $2, $4);
 	start_debug = save_debug;
@@ -10800,7 +10800,7 @@ write_statement:
 ;
 
 write_body:
-  record_name from_option write_option _retry_phrase _with_lock write_handler
+  file_or_record_name from_option write_option _retry_phrase _with_lock write_handler
   {
 	if (CB_VALID_TREE ($1)) {
 		cb_emit_write ($1, $2, $3, $5);
@@ -11445,6 +11445,30 @@ arithmetic_x:
 
 record_name:
   qualified_word		{ cb_build_identifier ($1, 0); }
+;
+
+/* FILE name -or- Record-name */
+
+file_or_record_name:
+  record_name
+  {
+	if (!CB_FILE_P (cb_ref ($1))) {
+		$$ = $1;
+	} else {
+		cb_error_x ($1, _("%s requires a record name as subject"),
+			current_statement->name);
+		$$ = cb_error_node;
+	}
+  }
+| TOK_FILE WORD
+  {
+	if (CB_FILE_P (cb_ref ($2))) {
+		$$ = $2;
+	} else {
+		cb_error_x ($2, _("'%s' is not a file name"), CB_NAME ($2));
+		$$ = cb_error_node;
+	}
+  }
 ;
 
 /* Table name */
