@@ -6526,6 +6526,7 @@ cb_check_overlapping (cb_tree src, cb_tree dst,
 		/* overlapping possible, would need more checks */
 		return 1;
 	}
+
 	if (src_off >= dst_off && src_off < (dst_off + dst_size)) {
 		goto overlap_ret;
 	}
@@ -8108,20 +8109,35 @@ cb_emit_rewrite (cb_tree record, cb_tree from, cb_tree lockopt)
 	if (cb_validate_one (from)) {
 		return;
 	}
-	if (!CB_REF_OR_FIELD_P (cb_ref (record))) {
-		cb_error_x (CB_TREE (current_statement),
-			_("%s requires a record name as subject"), "REWRITE");
-		return;
-	}
-	if (CB_FIELD_PTR (record)->storage != CB_STORAGE_FILE) {
-		cb_error_x (CB_TREE (current_statement),
-			_("%s subject does not refer to a record name"), "REWRITE");
-		return;
-	}
+	if (CB_FILE_P (cb_ref (record))) {
+		if (from == NULL) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s FILE requires a FROM clause"), "REWRITE");
+			return;
+		}
+		file = cb_ref(record);		/* FILE filename: was used */
+		f = CB_FILE (file);
+		if (f->record->sister) {
+			record = CB_TREE(f->record->sister);
+		} else {
+			record = CB_TREE(f->record);
+		}
+	} else {
+		if (!CB_REF_OR_FIELD_P (cb_ref (record))) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s requires a record name as subject"), "REWRITE");
+			return;
+		}
+		if (CB_FIELD_PTR (record)->storage != CB_STORAGE_FILE) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s subject does not refer to a record name"), "REWRITE");
+			return;
+		}
 
-	file = CB_TREE (CB_FIELD (cb_ref (record))->file);
-	if (!file || file == cb_error_node) {
-		return;
+		file = CB_TREE (CB_FIELD (cb_ref (record))->file);
+		if (!file || file == cb_error_node) {
+			return;
+		}
 	}
 	current_statement->file = file;
 	f = CB_FILE (file);
@@ -8149,7 +8165,7 @@ cb_emit_rewrite (cb_tree record, cb_tree from, cb_tree lockopt)
 		opts = COB_WRITE_LOCK;
 	}
 
-	if (from) {
+	if (from && (CB_FIELD_PTR (from) != CB_FIELD_PTR (record))) {
 		cb_emit (cb_build_move (from, record));
 	}
 
@@ -9007,19 +9023,34 @@ cb_emit_write (cb_tree record, cb_tree from, cb_tree opt, cb_tree lockopt)
 	if (cb_validate_one (from)) {
 		return;
 	}
-	if (!CB_REF_OR_FIELD_P (cb_ref (record))) {
-		cb_error_x (CB_TREE (current_statement),
-			_("%s requires a record name as subject"), "WRITE");
-		return;
-	}
-	if (CB_FIELD_PTR (record)->storage != CB_STORAGE_FILE) {
-		cb_error_x (CB_TREE (current_statement),
-			_("%s subject does not refer to a record name"), "WRITE");
-		return;
-	}
-	file = CB_TREE (CB_FIELD (cb_ref (record))->file);
-	if (!file || file == cb_error_node) {
-		return;
+	if (CB_FILE_P (cb_ref (record))) {
+		if (from == NULL) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s FILE requires a FROM clause"), "WRITE");
+			return;
+		}
+		file = cb_ref(record);		/* FILE filename: was used */
+		f = CB_FILE (file);
+		if (f->record->sister) {
+			record = CB_TREE(f->record->sister);
+		} else {
+			record = CB_TREE(f->record);
+		}
+	} else {
+		if (!CB_REF_OR_FIELD_P (cb_ref (record))) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s requires a record name as subject"), "WRITE");
+			return;
+		}
+		if (CB_FIELD_PTR (record)->storage != CB_STORAGE_FILE) {
+			cb_error_x (CB_TREE (current_statement),
+				_("%s subject does not refer to a record name"), "WRITE");
+			return;
+		}
+		file = CB_TREE (CB_FIELD (cb_ref (record))->file);
+		if (!file || file == cb_error_node) {
+			return;
+		}
 	}
 	current_statement->file = file;
 	f = CB_FILE (file);
@@ -9045,7 +9076,7 @@ cb_emit_write (cb_tree record, cb_tree from, cb_tree opt, cb_tree lockopt)
 		}
 	}
 
-	if (from) {
+	if (from && (CB_FIELD_PTR (from) != CB_FIELD_PTR (record))) {
 		cb_emit (cb_build_move (from, record));
 	}
 
