@@ -425,14 +425,6 @@ AT_CLEANUP
 AT_SETUP([variable record length DEPENDING item])
 AT_KEYWORDS([file])
 
-
-
-
-
-
-
-
-
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      prog.
@@ -728,5 +720,66 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 prog.cob: 16: warning: CODE-SET is not implemented
 prog.cob: 16: error: FOR item 'x' is a record
 prog.cob: 16: error: FOR item 'z' is in different record to 'x'
+])
+AT_CLEANUP
+
+
+AT_SETUP([WRITE / REWRITE FROM clause and FILE])
+AT_KEYWORDS([file record 88])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID.    prog.
+       ENVIRONMENT    DIVISION.
+       INPUT-OUTPUT   SECTION.
+       FILE-CONTROL.
+       SELECT TEST-FILE ASSIGN TO 'FILE-TEST'
+                        ORGANIZATION IS INDEXED
+                        ACCESS MODE  IS DYNAMIC
+                        RECORD KEY   IS TEST-P1.
+       DATA             DIVISION.
+       FILE             SECTION.
+       FD TEST-FILE.
+       01  TEST-REC.
+           05 TEST-P1   PIC X(4).
+           05 TEST-P2   PIC S9(4) COMP.
+       WORKING-STORAGE  SECTION.
+       01  SOME-REC     PIC X(04).
+           88  SOME-VAL VALUE 'ABCD'.
+       PROCEDURE        DIVISION.
+           OPEN  I-O TEST-FILE.
+           WRITE   SOME-VAL.
+           WRITE   SOME-REC.
+           WRITE   TEST-REC.
+           WRITE   TEST-REC FROM SOME-REC.
+           WRITE   TEST-FILE.
+           WRITE   FILE TEST-REC.
+           WRITE   FILE TEST-FILE.
+           WRITE   FILE TEST-FILE FROM TEST-REC.
+           WRITE   FILE TEST-FILE FROM SOME-REC.
+           REWRITE SOME-VAL.
+           REWRITE SOME-REC.
+           REWRITE TEST-REC.
+           REWRITE TEST-REC FROM SOME-REC.
+           REWRITE TEST-FILE.
+           REWRITE FILE TEST-REC.
+           REWRITE FILE TEST-FILE.
+           REWRITE FILE TEST-FILE FROM TEST-REC.
+           REWRITE FILE TEST-FILE FROM SOME-REC.
+           CLOSE TEST-FILE.
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 22: error: invalid use of 88 level item
+prog.cob: 23: error: WRITE subject does not refer to a record name
+prog.cob: 26: error: WRITE requires a record name as subject
+prog.cob: 27: error: 'TEST-REC' is not a file name
+prog.cob: 28: error: WRITE FILE requires a FROM clause
+prog.cob: 31: error: invalid use of 88 level item
+prog.cob: 32: error: REWRITE subject does not refer to a record name
+prog.cob: 35: error: REWRITE requires a record name as subject
+prog.cob: 36: error: 'TEST-REC' is not a file name
+prog.cob: 37: error: REWRITE FILE requires a FROM clause
 ])
 AT_CLEANUP
